[tool.poetry]
name = "abcblog"
version = "0.1.0"
description = ""
authors = ["Eloy85 <eloyfmolina@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django-ckeditor = "^6.7.0"
pillow = "^10.1.0"
psycopg2 = "^2.9.9"
python-decouple = "^3.8"
gunicorn = "^21.2.0"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.9"
whitenoise = "^6.6.0"
django-admin-interface = "^0.28.1"
django-cleanup = "^8.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
